log
Thu Apr  7 15:30:47 UTC 2022: 
 hashmap.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  0|6
total_score: 0/70
054dec3
Sat, 09 Apr 2022 19:34:50: 
test.c:8:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
    8 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
cf4ed0c
Sat, 09 Apr 2022 19:36:34: 
test.c:8:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
    8 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
bac8401
Sat, 09 Apr 2022 19:36:48: 
test.c:8:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
    8 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
6ae4906
Sat, 09 Apr 2022 19:37:07: 
test.c:8:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
    8 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
2e741c9
Sat, 09 Apr 2022 19:43:09: 
 tests:  0|6
total_score: 0/70
a73a79a
Sat, 09 Apr 2022 19:57:53: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
e4312f5
Sat, 09 Apr 2022 20:06:53: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function 'createMap':
hashmap.c:57:19: error: assignment to 'Pair **' from incompatible pointer type 'Pair *' [-Werror=incompatible-pointer-types]
   57 |   newMap->buckets = createPair(NULL, NULL);
      |                   ^
cc1.exe: all warnings being treated as errors
Compilation failed
f28a62c
